--- a/my-account.html
+++ b/my-account.html
@@ -38,7 +38,7 @@
 
     <script>
         $(document).ready(function() {
-
+            $('#username').text(localStorage.getItem('username'));
         })
 
         function url_redirect(options) {
@@ -283,7 +283,7 @@
             </div>
             <!-- End Side Menu -->
             <li class="dropdown">
-                <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">Henok</a>
+                <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown" id="username"></a>
                 <ul class="dropdown-menu">
                     <li><a href="#" onclick="logout()">Logout</a></li>
                 </ul>
