--- a/shop.html
+++ b/shop.html
@@ -443,7 +443,7 @@
                 })
         }
         $(document).ready(function() {
-
+            $('#username').text(localStorage.getItem('username'));
             var url = 'https://afrigebeta.herokuapp.com/api/user/returncathagory/' + storeid + '/' + localStorage.getItem('token');
             $.get(url,
                 function(data, status) {
@@ -991,7 +991,7 @@
 
             <!-- End Side Menu -->
             <li class="dropdown">
-                <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">Henok</a>
+                <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown" id="username"></a>
                 <ul class="dropdown-menu">
                     <li><a href="index.html">Logout</a></li>
                 </ul>
