navbar in marrket

--- a/register.html
+++ b/register.html
@@ -213,7 +213,7 @@
             <div class="wrap-login100">
                 <div class="login100-pic js-tilt" data-tilt>
                     <img src="public/images/afrigebeta.jpg" alt="IMG">
-                    <div style="align-self: center; align-content: center;">
+                    <!-- <div style="align-self: center; align-content: center;">
                         <h2 style="font-family: cursive;text-align: center;">Benefits of becoming a member </h2>
                         <ul style="text-align: center;margin: 2px; padding: 5px;">
                             <li>~~ A free pass to ordering your grocieries online</li>
@@ -221,13 +221,13 @@
                             <li>~~ Notifications on upcoming discounts and more </li>
 
                         </ul>
-                    </div>
+                    </div> -->
                 </div>
 
                 <form class="login100-form validate-form">
-                    <span class="login100-form-title">
+                    <!-- <span class="login100-form-title">
 						Member Sign Up
-					</span>
+					</span> -->
                     <div class="wrap-input100 validate-input" data-validate="First name is required">
                         <input class="input100" id="fName" type="text" name="fullname" placeholder="First Name">
                         <span class="focus-input100"></span>
