--- a/phone_verification.html
+++ b/phone_verification.html
@@ -6,10 +6,12 @@
 
     <!-- Add Firebase products that you want to use -->
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
-  <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script> 
-   
+ <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
     <script>
 
+  $(document).ready(function() {
+  	alert("hi")
+  })
         var firebaseConfig = {
             apiKey: "AIzaSyBBe_h_aIgSRbT-xwXhlGkSmbUB2zmZGNc",
             authDomain: "huluradiox.firebaseapp.com",
