--- a/phone_verification.html
+++ b/phone_verification.html
@@ -7,6 +7,7 @@
     <!-- Add Firebase products that you want to use -->
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
  <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+ <script type="text/javascript" src="https://www.turnjs.com/lib/turn.min.js "></script> 
     <script>
 
   $(document).ready(function() {
