--- a/phone_verification.html
+++ b/phone_verification.html
@@ -45,7 +45,7 @@
                             }
                         }).fail(function(jqXHR, textStatus, errorThrown) {
 
-                           alert("error")
+                           console.log(jqXHR)
                         });
      /*
                     fetch("https://afrigebeta.herokuapp.com/api/user/sendCode", {
