register for the firebase

--- a/contact.html
+++ b/contact.html
@@ -121,7 +121,9 @@
             </div>
         </div>
     </div>
-
+    <a href="#" onclick="loaddata()" data-toggle="modal" data-target="#exampleModal" class="float">
+        <i class="fa fa-shopping-cart my-float"></i>
+        </a>
     <div class="contact-box">
         <div class="container">
             <div class="row">
