--- a/menu.html
+++ b/menu.html
@@ -845,7 +845,9 @@
     </header>
     <!-- End header -->
 
-
+    <a href="#" onclick="loaddata()" data-toggle="modal" data-target="#exampleModal" class="float">
+        <i class="fa fa-shopping-cart my-float"></i>
+        </a>
     <!-- Start All Pages -->
     <div class="all-page-title page-breadcrumb">
         <div class="container text-center">
