--- a/about.html
+++ b/about.html
@@ -103,7 +103,9 @@
         </nav>
     </header>
     <!-- End header -->
-
+    <a href="#" onclick="loaddata()" data-toggle="modal" data-target="#exampleModal" class="float">
+        <i class="fa fa-shopping-cart my-float"></i>
+        </a>
     <!-- Start header -->
     <div class="all-page-title page-breadcrumb">
         <div class="container text-center">
