--- a/phone_verification.html
+++ b/phone_verification.html
@@ -7,46 +7,35 @@
 
     <!-- Add Firebase products that you want to use -->
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
-    <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="https://www.turnjs.com/lib/turn.min.js "></script>
     <script>
-        /*
-                                                                                                                                                                        var firebaseConfig = {
-                                                                                                                                                                            apiKey: "AIzaSyBBe_h_aIgSRbT-xwXhlGkSmbUB2zmZGNc",
-                                                                                                                                                                            authDomain: "huluradiox.firebaseapp.com",
-                                                                                                                                                                            databaseURL: "https://huluradiox.firebaseio.com",
-                                                                                                                                                                            projectId: "huluradiox",
-                                                                                                                                                                            storageBucket: "huluradiox.appspot.com",
-                                                                                                                                                                            messagingSenderId: "701196878506",
-                                                                                                                                                                            appId: "1:701196878506:web:09e72de08f77c460ac46d3",
-                                                                                                                                                                            measurementId: "G-Y50XR144GX"
-                                                                                                                                                                        };
-                                                                                                                                                                        // Initialize Firebase
-                                                                                                                                                                        firebase.initializeApp(firebaseConfig);*/
-
         var firebaseConfig = {
-            apiKey: "AIzaSyBHaWNZ3mTKou-bZxsvxZ0fGDY8tx9Qkrw",
-            authDomain: "afriweb-1629e.firebaseapp.com",
-            projectId: "afriweb-1629e",
-            storageBucket: "afriweb-1629e.appspot.com",
-            messagingSenderId: "967453799118",
-            appId: "1:967453799118:web:fc7ca5d9f6723c510ad69f",
-            measurementId: "G-WL785NS1T3"
+            apiKey: "AIzaSyBBe_h_aIgSRbT-xwXhlGkSmbUB2zmZGNc",
+            authDomain: "huluradiox.firebaseapp.com",
+            databaseURL: "https://huluradiox.firebaseio.com",
+            projectId: "huluradiox",
+            storageBucket: "huluradiox.appspot.com",
+            messagingSenderId: "701196878506",
+            appId: "1:701196878506:web:09e72de08f77c460ac46d3",
+            measurementId: "G-Y50XR144GX"
         };
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
 
         function init() {
-
-
             window.recaptchaVerifier = new firebase.auth.RecaptchaVerifier('sendCode', {
                 'size': 'invisible',
                 'callback': function(recaptchaToken) {
                     // reCAPTCHA solved, send recaptchaToken and phone number to backend.
 
                     // a REST call to your backend
+                    console.dir({
+                        phoneNumber: document.getElementById('phoneNumber').value,
+                        recaptchaToken
+                    })
 
-                    console.log("everything allright")
+                    var myHeaders = new Headers();
+                    myHeaders.append('Content-Type', 'application/json');
+
 
 
                     $.post("https://afrigebeta.herokuapp.com/api/user/sendCode", {
@@ -61,24 +50,8 @@
 
                         console.log(jqXHR)
                     });
-                    /*
-                                   fetch("https://afrigebeta.herokuapp.com/api/user/sendCode", {
-                                           method: "post", 
-                                           headers: {'Content-Type': 'application/json'},
-                                           mode: 'cors',
-                                           cache: 'no-cache',
-                                           body: JSON.stringify({
-                                               phoneNumber: document.getElementById('phoneNumber').value,
-                                               recaptchaToken: recaptchaToken
-                                           })
-                                   })
-                                   .then(response => response.json())
-                                   .then(res => {s
-                                       window.sessionOTPId = res.sessionInfo
-                                       document.getElementById("otp_input").style.display = "block"
-                                       document.getElementById("otp_button").style.display = "block"
-                                   });
-                                   */
+
+
                 }
             });
 
