--- a/phone_verification.html
+++ b/phone_verification.html
@@ -7,6 +7,11 @@
 
     <!-- Add Firebase products that you want to use -->
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
+
+
+    <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+
+
     <script>
         var firebaseConfig = {
             apiKey: "AIzaSyBBe_h_aIgSRbT-xwXhlGkSmbUB2zmZGNc",
