--- a/register.html
+++ b/register.html
@@ -21,11 +21,27 @@
     <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
 
     <script>
+        // if (4 == 1) {
+
+        //     firstname = document.getElementById("first_name").value;
+        //     lastname = document.getElementById("last_name").value;
+        //     username = document.getElementById("username").value;
+        // } else if (4 == 2) {
+        //     password = document.getElementById("password").value;
+        //     phone = document.getElementById("phoneNumber").value;
+        //     age = document.getElementById("age").value;
+        // }
+
+        function isempty() {
+            let empty = true;
+
+        }
         let firstname = ""
         let username = ""
         let lastname = ""
         let phone = ""
         let password = ""
+        let email = ""
         let age = ""
 
         var firebaseConfig = {
@@ -42,42 +58,40 @@
         firebase.initializeApp(firebaseConfig);
 
         function init() {
-            if (1 == 1) {
-                window.recaptchaVerifier = new firebase.auth.RecaptchaVerifier('sendCode', {
-                    'size': 'invisible',
-                    'callback': function(recaptchaToken) {
-                        // reCAPTCHA solved, send recaptchaToken and phone number to backend.
 
-                        // a REST call to your backend
-                        console.dir({
-                            phoneNumber: document.getElementById('phoneNumber').value,
-                            recaptchaToken
-                        })
+            window.recaptchaVerifier = new firebase.auth.RecaptchaVerifier('sendCode', {
+                'size': 'invisible',
+                'callback': function(recaptchaToken) {
+                    // reCAPTCHA solved, send recaptchaToken and phone number to backend.
 
-                        var myHeaders = new Headers();
-                        myHeaders.append('Content-Type', 'application/json');
+                    // a REST call to your backend
+                    console.dir({
+                        phoneNumber: document.getElementById('phoneNumber').value,
+                        recaptchaToken
+                    })
+
+                    var myHeaders = new Headers();
+                    myHeaders.append('Content-Type', 'application/json');
 
 
-
+                    console.log("this is the file")
                         // $.post("https://afrigebeta.herokuapp.com/api/user/sendCode", {
                         //     phoneNumber: document.getElementById('phoneNumber').value,
                         //     recaptchaToken: recaptchaToken
                         // }, function(data, status) {
 
-                        //     if (status === 'success') {
-                        //         alert("hi")
-                        //     }
-                        // }).fail(function(jqXHR, textStatus, errorThrown) {
+                    //     if (status === 'success') {
+                    //         alert("hi")
+                    //     }
+                    // }).fail(function(jqXHR, textStatus, errorThrown) {
 
-                        //     console.log(jqXHR)
-                        // });
+                    //     console.log(jqXHR)
+                    // });
 
 
-                    }
-                });
-            } else {
-                console.log("not now")
-            }
+                }
+            });
+
 
 
             function sendOTP() {
@@ -135,13 +149,17 @@
             t = t + "        <input type=\"text\" name=\"username\" id=\"username\" placeholder=\"username\" />"
             t = t + "    </div>"
             t = t + " <div class=\"form-group\">"
-            t = t + "     <input type=\"text\" name=\"city\" id=\"city\" placeholder=\"First Name\" />"
+            t = t + "     <input type=\"text\" name=\"city\" id=\"city\" placeholder=\"City\" />"
             t = t + "  </div>"
             t = t + "  <div class=\"form-group\">"
-            t = t + "      <input type=\"text\" name=\"phone\" id=\"phone\" placeholder=\"Last Name\" />"
+            t = t + "      <input type=\"text\" name=\"phone\" id=\"phoneNumber\" placeholder=\"phone\" />"
             t = t + "   </div>"
             t = t + "   <div class=\"form-group\">"
-            t = t + "       <input type=\"text\" name=\"age\" id=\"age\" placeholder=\"username\" />"
+            t = t + "       <input type=\"text\" name=\"age\" id=\"age\" placeholder=\"age\" />"
+            t = t + "   </div>"
+
+            t = t + "   <div class=\"form-group\">"
+            t = t + "       <input type=\"text\" name=\"password\" id=\"password\" placeholder=\"password\" />"
             t = t + "   </div>"
             t = t + "  </div>"
             t = t + "</div>"
@@ -149,6 +167,66 @@
 
 
             $('.formposition').append(t)
+
+            function isEmpty(str) {
+                return (!str || /^\s*$/.test(str));
+            }
+
+            function validatePhone(value) {
+                var re = /^[0-9]{10}$/;
+                var re2 = /^[0-9,+]{13}$/;
+                var re3 = /^251[0-9]{9}$/;
+                if (value.match(re) || value.match(re2) || value.match(re3)) return true;
+                else return false
+            }
+
+            function validateAge(value) {
+                var re = /^\d+$/;
+                if (value.match(re)) return true;
+                else return false
+            }
+
+
+            $("input[type='text']").on("input", function() {
+
+                // if (currentIndex == 1) {
+
+                //     firstname = document.getElementById("first_name").value;
+                //     lastname = document.getElementById("last_name").value;
+                //     username = document.getElementById("username").value;
+                // } else if (currentIndex == 2) {
+                //     password = document.getElementById("password").value;
+                //     phone = document.getElementById("phoneNumber").value;
+                //     age = document.getElementById("age").value;
+                // }
+                function change_placeholder_color(target_class, color_choice) {
+                    $("body").append("<style>" + target_class + "::placeholder{color:" + color_choice + "}</style>")
+                }
+
+
+                if (isEmpty(document.getElementById("first_name").value) == false &&
+                    isEmpty(document.getElementById("last_name").value) == false &&
+                    isEmpty(document.getElementById("username").value) == false &&
+                    isEmpty(document.getElementById("password").value) == false &&
+                    isEmpty(document.getElementById("phoneNumber").value) == false &&
+                    isEmpty(document.getElementById("city").value) == false &&
+                    isEmpty(document.getElementById("age").value) == false) {
+                    if (validatePhone(document.getElementById("phoneNumber").value) == true && validateAge(document.getElementById("age").value) == true) {
+                        //now disable the button
+
+                        document.getElementById("sendCode").disabled = false;
+
+                    } else {
+
+
+                        document.getElementById("sendCode").disabled = true;
+                    }
+                } else {
+                    document.getElementById("sendCode").disabled = true;
+                }
+            });
+
+
 
         })
 
@@ -173,7 +251,7 @@
             t = t + "   </div>"
             t = t + " <div class=\"form-group-flex\">"
             t = t + "     <div class=\"form-group\">"
-            t = t + "         <input type=\"text\" name=\"code\" id=\"code\" placeholder=\"First Name\" />"
+            t = t + "         <input type=\"text\" name=\"code\" id=\"code\" placeholder=\"Code\" />"
             t = t + "     </div>"
 
             t = t + "  </div>"
@@ -189,12 +267,13 @@
 
 <body onload="init()">
     <div id="re-container"></div>
+
     <div class="main">
 
         <div class="container">
             <h2>Build your profile</h2>
             <div class="formposition"></div>
-            <button id="sendCode" onclick="next()">Next</button>"
+            <button id="sendCode" disabled onclick="next()">Next</button>"
         </div>
 
     </div>
